--- a/Day001_read_image_HW.ipynb
+++ b/Day001_read_image_HW.ipynb
@@ -2,21 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
     "\n",
-    "img_rgb = cv2.imread('C:/Users/Joker/Desktop/lena.png',cv2.IMREAD_COLOR)\n",
-    "img_gray = cv2.imread('C:/Users/Joker/Desktop/lena.png',cv2.IMREAD_GRAYSCALE)\n",
+    "img = cv2.imread('C:/Users/Joker/Desktop/lena.png',cv2.IMREAD_COLOR)\n",
+    "img_B = img[:,:,0]\n",
+    "img_G = img[:,:,1]\n",
+    "img_R = img[:,:,2]\n",
     "\n",
-    "cv2.imshow('rgb',img_rgb)\n",
-    "cv2.imshow('gray',img_gray)\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()\n",
-    "\n"
+    "while True:\n",
+    "    cv2.imshow('RBG-B',img_B)\n",
+    "    cv2.imshow('RBG-G',img_G)\n",
+    "    cv2.imshow('RBG-R',img_R)\n",
+    "    k = cv2.waitKey(0)\n",
+    "    if k == 27:\n",
+    "        cv2.destroyAllWindows()\n",
+    "        break"
    ]
   },
   {
